...
            VStack(alignment: .leading, spacing: 8) {
                Text("Имя")
                    .font(.headline)
                    .fontWeight(.medium)
                
                HStack(spacing: 12) {
                    PCTextField(title: "Введите имя", text: $viewModel.eventBatchName, identifier: "batch-name-field")
                    
                    PCColorPickerView(selectedColor: $viewModel.selectedColor, defaultColor: viewModel.defaultColor)
                }
                .padding(.horizontal, 4)
            }
            
...
